# AzureSphereDevX.Examples

./: .gitignore  .gitmodules  README.md  build_all_boards.ps1
async_example/: main.c  main.h
avnet_RTAppLab_app/: README.md  app_exit_codes.h  app_manifest.json  generic_rt_app.h  launch.vs.json  main.c  main.h
avnet_bbq_monitor/: CMakeLists.txt  README.md  app_manifest.json  bbq_monitor_oled.c  bbq_monitor_oled.h  main.c  main.h  sd1306.c  sd1306.h  thermo_click_rt_app.h
avnet_end_to_end/: CMakeLists.txt  README.md  app_manifest.json  main.c  main.h
avnet_end_to_end/IoTConnectDeviceTemplate/: Avnet 2_1 DevX End to End_template.JSON  Avnet DevX End to End_template.JSON
avnet_gw_send_message/: CMakeLists.txt  README.md  app_manifest.json  main.c  main.h
avnet_gw_send_message/iotConnect Templates/: devXGwDemo21_template.JSON  devXGwDemo_template.JSON
avnet_lightranger5/: CMakeLists.txt  main.c  main.h
avnet_low_power_temp_hum/: .gitignore  README.md  app_exit_codes.h  app_manifest.json  main.c  main.h  pht_click.h
avnet_low_power_temp_hum/binaries/: AvnetPHTClickRTApp-App1-V1.imagepackage
avnet_nespresso_demo/: CMakeLists.txt  MCP39F511N.c  MCP39F511N.h  README.md  app_manifest.json  main.c  main.h  pwr_meter_rt_app.h
avnet_nespresso_demo/assets/: AvnetPWR_RTApp-App1-V1.imagepackage
avnet_netBooter_remote_power_control/: CMakeLists.txt  README.md  app_exit_codes.h  app_manifest.json  main.c  main.h  netBooter.c  netBooter.h
avnet_netBooter_remote_power_control/assets/Board Support Package/: lan-enc28j60-isu0-int5.imagepackage
avnet_netBooter_remote_power_control/assets/IoTConnect/: Network Controlled Power Switch_dashboard_export.json  netMonitor_template.JSON
avnet_rsl10_2devices/: CMakeLists.txt  README.md  app_manifest.json  build_options.h  main.c  main.h  rsl10.c  rsl10.h
avnet_rsl10_2devices/IoTConnect/: RSL10Final_template.JSON
avnet_rsl10_2devices/RSL10Firmware/: sense_example_broadcaster_V1.0.1.fota  sense_example_broadcaster_V1.0.1.hex
avnet_rsl10_2devices/RSL10Repeater/: $LIB$.adv.reports.BT510.sb  $autorun$.BT510.gateway.uwc
avnet_send_message/: CMakeLists.txt  README.md  main.c  main.h
avnet_sensors_converge/avnet_PHT/: .gitignore  CMakeLists.txt  README.md  app_manifest.json  main.c  main.h
avnet_sensors_converge/avnet_PHT/DemoBinaries/: AvnetPHTClick-Workshop-V1-signed.imagepackage  AvnetPHTClick-Workshop-V1.imagepackage  avnet_PHT_HLApp-V1-signed.imagepackage  avnet_PHT_HLApp-V1.imagepackage
avnet_sensors_converge/avnet_lightranger5/: CMakeLists.txt  README.md  app_manifest.json  lightranger5_click.h
avnet_sensors_converge/avnet_lightranger5/DemoBinaries/: AvnetLightRanger5Click-Rev2-Click2-Workshop-V1-signed.imagepackage  avnet_sensors_converge_TMF8801_HLApp-V1-signed.imagepackage
avnet_sensors_converge/avnet_smart_retail_shelf/: .gitignore  CMakeLists.txt  README.md  app_exit_codes.h  app_manifest.json  avnetSmartShelfInterface.h  azsphere_board.txt  main.c  main.h  persistantConfig.c  persistantConfig.h
avnet_sensors_converge/avnet_smart_retail_shelf/3DPartsToPrint/: AddOnDisplayFinal.stl  ShelfBottomFinal.stl  ShelfTopP3.stl  StarterKitMountP2.stl
avnet_sensors_converge/avnet_smart_retail_shelf/IoTConnect/: SmartShelf_template.JSON
avnet_sensors_converge/avnet_smart_retail_shelf/RTApp/: AvnetPHT-LightRangerClickRTApp-App1-V1.imagepackage
avnet_sensors_converge/avnet_tempHum13/: CMakeLists.txt  README.md  app_manifest.json  htu21d_rtapp.h  main.c  main.h
avnet_sk_demo/: CMakeLists.txt  README.md  als_pt19_light_sensor.h  app_exit_codes.h  app_manifest.json  build_options.h  i2c.c  i2c.h  launch.vs.json  main.c  main.h  oled.c  oled.h
avnet_sk_demo/AvnetIoTConnect/: StarterKitOobDeviceTemplate.JSON
avnet_sk_demo/RealTimeExampleApp/: AvnetAlsPt19RTApp.imagepackage  README.md
avnet_smart_parking/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  app_exit_codes.h  app_manifest.json  azsphere_board.txt  launch.vs.json  lightranger5_click.h  main.c  main.h
avnet_smart_parking/RTAppBinary/: AvnetLightRanger5Click-Rev1-Click1-App1-V1.imagepackage  AvnetLightRanger5Click-Rev1-Click1-App1-V2.imagepackage
azure_end_to_end/: CMakeLists.txt  main.c  main.h
azure_send_message/: CMakeLists.txt  README.md  main.c  main.h
deferred_update/: CMakeLists.txt  README.md  main.c  main.h
device_twins/: CMakeLists.txt  README.md  main.c  main.h
device_twins_json_object/: CMakeLists.txt  README.md  app_manifest.json  main.c  main.h
direct_methods/: CMakeLists.txt  README.md  app_manifest.json  azsphere_version.txt  main.c  main.h
error_reporting/: CMakeLists.txt  README.md  app_manifest.json  main.c
gpio_example/: CMakeLists.txt  README.md  main.c  main.h
iaq_sphere/: CMakeLists.txt  app_manifest.json
intercore_example/: README.md
intercore_example/HighLevelApp/: CMakeLists.txt  CMakeSettings.json  als_pt19_light_sensor.h  main.c  main.h
intercore_example/IntercoreContract/: intercore_contract.h
intercore_example/RealTimeAppOne/: CMakeLists.txt  main.c
intercore_example/RealTimeAppTwo/: CMakeLists.txt  main.c
intercore_generic_example/: CMakeLists.txt  README.md  app_manifest.json  intercore_generic.h  launch.vs.json  main.c  main.h
little_fs_on_mutable_storage/: CMakeLists.txt  app_exit_codes.h  app_manifest.json  littlefs_mgr.c  littlefs_mgr.h  main.c  main.h
monitor_memory_usage/: CMakeLists.txt  main.c  main.h
pwm_click_buzz/: CMakeLists.txt  README.md  app_manifest.json  main.c  main.h
pwm_example/: CMakeLists.txt  README.md  app_manifest.json  azsphere_board.txt  main.c  main.h
starter_project/: CMakeLists.txt  app_manifest.json  main.c  main.h
terminate_example/: README.md
timer_example/: CMakeLists.txt  README.md  main.c  main.h
tools/build-tools/: build-all.ps1  build_all.ps1  get_latest_sysroot.ps1  get_tools_version.ps1  update-version.ps1  update_config.ps1
uart_example/: CMakeLists.txt  README.md  app_manifest.json  main.c  main.h
utilities/: README.md
(+2 files in other folders)
